--- a/Werewolf for Telegram/Werewolf Website/plugins/bootstrap.daterangepicker/package.json
+++ b/Werewolf for Telegram/Werewolf Website/plugins/bootstrap.daterangepicker/package.json
@@ -26,7 +26,9 @@
     "nmp": "1.4.28"
   },
   "dependencies": {
-    "jquery": "^1.10",
-    "moment": "^2.9.0"
-  }
+  "jquery": ">=3.5.0"
+ }
+ "devDependencies": {
+  "jquery": ">=3.5.0"
+ }
 }
